jobs/performance/.ipynb_checkpoints/slurm-28707236-checkpoint.out
****************************************************************
*                      SLURM Batch System                      *
*           IN2P3 Computing Centre, Villeurbanne FR            *
****************************************************************
* Date:                 Tue May  9 13:46:17 CEST 2023
* Job name:             run_py.sh
* Job id:               28707236
* User:                 namourou
* Account:              lsst
* Submit host:          cca009
* Partition:            htc
* Quality of service:   normal
* Nodelist:             ccwslurm0317
****************************************************************
DESC setup
  File "/pbs/home/n/namourou/test_jupyter/cluster_challenge/notebooks/NB_analysis/am-cdc/magi-magr.py", line 26
    c_merged12_1.read_members(am_inpath, tags={'id':'id', 'id_cluster'='id_cluster', 'pmem'='pmem', 'z' = 'z',
                                                                     ^
SyntaxError: ':' expected after dictionary key
matching infos
completeness
purity
overmerging & fragmentation
****************************************************************
*                      SLURM Batch System                      *
*           IN2P3 Computing Centre, Villeurbanne FR            *
****************************************************************
Date: Tue May  9 13:46:25 CEST 2023
Job informations can be found using these commands:
Accounting:
sacct -j 28707236
Efficiency:
seff 28707236
****************************************************************
